Mon Jun 28 10:44:00 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/tests/Config_Handlers/Handler_Test.cpp: 
	* DnC/tests/Config_Handlers/CompImplDesc_Handler_Test.cpp:
	* DnC/tests/Config_Handlers/CompIntrDesc_Handler_Test.cpp:
	* DnC/tests/Config_Handlers/CompPkgDesc_Handler_Test.cpp:
	* DnC/tests/Config_Handlers/Domain_Handler_Test.cpp:
	* DnC/tests/Config_Handlers/Handler_Test.h:
	* DnC/tests/Config_Handlers/IAD_Handler_Test.cpp:
	* DnC/tests/Config_Handlers/PC_Handler_Test.cpp:
	* DnC/tests/Config_Handlers/Plan_Handler_Test.cpp:
	* DnC/tests/Config_Handlers/handler_test.mpb:

	  Fixed the VC6 errors by excluding the DnC tests on the
	  compilers ACE_HAS_BROKEN_NESTED_TEMPLATES.

Mon Jun 28 10:40:00 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/tests/Config_Handlers/RobotAssembly/README.html: 

	  Deleted "file://" from -p & -d options of executor.

Mon Jun 28 08:03:25 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIDLC/ServantSourceGenerator.cpp:

	  Fixed a bug with code generation for uses multiple. Thanks to Ed
	  Mulholland for reporting the problem.

Mon Jun 28 00:18:04 2004  Irfan Pyarali  <irfan@oomworks.com>

	* CIAO/performance-tests/Protocols: 

	  Added new test.  Closely mirrors
	  $TAO_ROOT/performance-tests/Protocols but uses CCM components
	  rather that TAO applications.

Sun Jun 27 12:59:04 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/tests/scripts/BasicSP/basicNodeDaemon.pl:
        * DnC/tests/scripts/BasicSP/basicsp.dat:
        * DnC/tests/scripts/RobotAssembly/robotNodeDaemon.pl:
        * DnC/tests/scripts/RobotAssembly/robotassembly.dat:

          Added the scripts directory to help in the integrated
          testing.

Sun Jun 27 12:50:12 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/tests/Config_Handlers/HUDisplay/Deployment.xsd:
        * DnC/tests/Config_Handlers/HUDisplay/XMI.xsd:

          Checked in the schema files into the repository to assist