@@ -30,16 +30,23 @@ namespace Deployment
    */
   class Config_Handler_Export DnC_Dump
     {
+/*
+ *  If the compiler has broken nested templates exclude dumping functionality.
+ */
+#ifndef ACE_HAS_BROKEN_NESTED_TEMPLATES
+
     public:
       /// Dump functions for CORBA sequences
-      static void DnC_Dump::dump (const char* caption, const ::CORBA::StringSeq &str_seq);
+      static void DnC_Dump::dump (const char* caption,
+                                  const ::CORBA::StringSeq &str_seq);
 
       template <typename SEQUENCE>
         static void dump_sequence (const char* caption, const SEQUENCE &seq);
 
       template <typename ROOT, typename SEQUENCE,
                 typename DATA_TYPE, typename CLASS>
-        static void dump_ref_seq (const char* caption, SEQUENCE& seq, const char* root, DATA_TYPE CLASS::*data);
+        static void dump_ref_seq (const char* caption, SEQUENCE& seq,
+                                  const char* root, DATA_TYPE CLASS::*data);
 
       template <typename ROOT, typename REFERENCE, typename DATA_TYPE,
                 typename CLASS>
@@ -70,35 +77,45 @@ namespace Deployment
 
       static void dump (const ::Deployment::AssemblyPropertyMapping &apm);
 
-      static void dump (const ::Deployment::ComponentPackageDescription &comppkgdesc);
+      static void dump (const ::Deployment::ComponentPackageDescription
+                             &comppkgdesc);
 
-      static void dump (const ::Deployment::ComponentPortDescription &compportdesc);
+      static void dump (const ::Deployment::ComponentPortDescription
+                             &compportdesc);
 
-      static void dump (const ::Deployment::ComponentPropertyDescription &comppropdesc);
+      static void dump (const ::Deployment::ComponentPropertyDescription
+                             &comppropdesc);
 
-      static void dump (const ::Deployment::MonolithicImplementationDescription &mid);
+      static void dump (const ::Deployment::MonolithicImplementationDescription
+                             &mid);
 
       static void dump (const ::Deployment::PackageConfiguration &pc);
 
-      static void dump (const ::Deployment::PackagedComponentImplementation &pci);
+      static void dump (const ::Deployment::PackagedComponentImplementation
+                             &pci);
 
       static void dump (const ::Deployment::SubcomponentPortEndpoint &spe);
 
       static void dump (const ::Deployment::Requirement &requirement);
 
-      static void dump (const ::Deployment::ComponentExternalPortEndpoint &cepe);
+      static void dump (const ::Deployment::ComponentExternalPortEndpoint
+                             &cepe);
 
       static void dump (const ::Deployment::ComponentPackageReference &cpr);
 
-      static void dump (const ::Deployment::ComponentImplementationDescription &cid);
+      static void dump (const ::Deployment::ComponentImplementationDescription
+                             &cid);
 
-      static void dump (const ::Deployment::SubcomponentInstantiationDescription &sid);
+      static void dump (const ::Deployment::SubcomponentInstantiationDescription
+                             &sid);
 
-      static void dump (const ::Deployment::NamedImplementationArtifact &named_implementation);
+      static void dump (const ::Deployment::NamedImplementationArtifact
+                             &named_implementation);
 
       static void dump (const ::Deployment::ComponentInterfaceDescription &cid);
 
-      static void dump (const ::Deployment::SubcomponentPropertyReference &scpr);
+      static void dump (const ::Deployment::SubcomponentPropertyReference
+                             &scpr);
 
       static void dump (const ::Deployment::ExternalReferenceEndpoint &ere);
 
@@ -106,13 +123,14 @@ namespace Deployment
 
       static void dump (const ::Deployment::Capability &capability);
 
-      static void dump (const ::Deployment::ImplementationArtifactDescription &iad);
+      static void dump (const ::Deployment::ImplementationArtifactDescription
+                             &iad);
 
       static void dump (const ::Deployment::ImplementationRequirement &ir);
 
       static void dump(const Deployment::ResourceUsageKind &ruk);
 
-      static void dump(const Deployment::DeploymentPlan &plan) {}
+      static void dump(const Deployment::DeploymentPlan &plan);
 
       static void dump(const Deployment::MonolithicDeploymentDescription &mdd);
 
@@ -126,7 +144,8 @@ namespace Deployment
 
       static void dump(const Deployment::ArtifactDeploymentDescription &add);
 
-      static void dump(const Deployment::InstanceResourceDeploymentDescription &irdd);
+      static void dump(const Deployment::InstanceResourceDeploymentDescription
+                             &irdd);
 
       static void dump(const PlanSubcomponentPortEndpoint &pspe);
 
@@ -140,11 +159,15 @@ namespace Deployment
 
       static void dump (const Deployment::RequirementSatisfier& rs);
 
-      ///   ... Zillions of such things ....
-
     private:
       static void dump (const ::CORBA::Any &any);
       // Helper function to print an Any
+
+#else // ACE_HAS_BROKEN_NESTED_TEMPLATES
+
+      static void dump(const Deployment::DeploymentPlan &plan) { }
+
+#endif // ACE_HAS_BROKEN_NESTED_TEMPLATES
     };
 }
 
