@@ -1,3 +1,10 @@
+Mon Jun 28 11:18:00 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>
+	* DnC/Config_Handlers/DnC_Dump.cpp:
+	* DnC/Config_Handlers/DnC_Dump.h: 
+
+	  Fixed the VC6 errors by excluding the DnC dump functionality on the
+	  compilers ACE_HAS_BROKEN_NESTED_TEMPLATES.
+
 Mon Jun 28 10:44:00 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>
 
 	* DnC/tests/Config_Handlers/Handler_Test.cpp: 
